[gd_scene load_steps=8 format=3 uid="uid://dbvy0rhwpv4w4"]

[ext_resource type="Script" uid="uid://vm4py6u87p6d" path="res://Scripts/UI/SelectableOptionNode.gd" id="1_qeqfu"]
[ext_resource type="Texture2D" uid="uid://3p2l7rec0gh5" path="res://Assets/Sprites/UI/Cursor.png" id="1_r2b5m"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="3_on6n3"]
[ext_resource type="JSON" path="res://Assets/Sprites/UI/Cursor.json" id="4_mljen"]
[ext_resource type="Script" uid="uid://d63p6qr5a748" path="res://Scripts/UI/AutoScrollContainer.gd" id="5_mljen"]
[ext_resource type="Script" uid="uid://co6tjg3w6qpd8" path="res://Scripts/Parts/LabelFontChanger.gd" id="5_on6n3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qti1l"]
atlas = ExtResource("1_r2b5m")
region = Rect2(0, 0, 8, 8)

[node name="SelectableOptionNode" type="HBoxContainer"]
offset_right = 253.0
offset_bottom = 8.0
focus_mode = 2
theme_override_constants/separation = 0
script = ExtResource("1_qeqfu")

[node name="Cursor" type="Control" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Cursor" type="TextureRect" parent="Cursor"]
layout_mode = 0
offset_top = 4.0
offset_right = 8.0
offset_bottom = 12.0
texture = SubResource("AtlasTexture_qti1l")
stretch_mode = 2

[node name="ResourceSetter" type="Node" parent="Cursor/Cursor" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("3_on6n3")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("4_mljen")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="AutoScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("5_mljen")
metadata/_custom_type_script = "uid://d63p6qr5a748"

[node name="Title" type="Label" parent="AutoScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "modeadpiawjda:"
uppercase = true

[node name="LabelFontChanger" type="Node" parent="." node_paths=PackedStringArray("labels")]
script = ExtResource("5_on6n3")
labels = [NodePath("../AutoScrollContainer/Title"), NodePath("../HBoxContainer/AutoScrollContainer2/Value")]
metadata/_custom_type_script = "uid://co6tjg3w6qpd8"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -4

[node name="LeftArrow" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "◄"
uppercase = true

[node name="AutoScrollContainer2" type="ScrollContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("5_mljen")
is_active = true
auto_minimum_resize = true
metadata/_custom_type_script = "uid://d63p6qr5a748"

[node name="Value" type="Label" parent="HBoxContainer/AutoScrollContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "aaaaaa"
horizontal_alignment = 1
uppercase = true

[node name="RightArrow" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "►"
uppercase = true

[connection signal="focus_entered" from="." to="." method="set_selected" binds= [true]]
[connection signal="focus_exited" from="." to="." method="set_selected" binds= [false]]
